--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,7 +14,6 @@
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.3",
-    "yelp-fusion": "^1.0.3",
     "yelpv3": "^1.2.1"
   }
 }
